# homeki-jni

./: .gitignore  CMakeLists.txt  imake  telldusjni.cpp  tellstick.cpp
cmake/Modules/: FindTelldus.cmake
include/: com_homeki_core_device_tellstick_TellStickNative.h
java/: gen
src/: CMakeLists.txt  main.cpp  tellstick.cpp  tellstickeventqueue.cpp  tellstickeventqueue.h
